--- a/scss/index.scss
+++ b/scss/index.scss
@@ -32,3 +32,9 @@ display: block;
   text-align: center;
   color: #D8B43F;
 }
+.captionplan{
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 20px;
+  color: gold;
+}
