--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -273,7 +273,8 @@
 .kb_caption h1
 {
     color:#bf392b;
-    background:#fff
+    background:rgba(255,255,255,0.5);
+    border-radius: 60px;
 }
 .kb_caption h2
 {
