--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -5,7 +5,7 @@
 	width: 100%;
 	font: bold 16px sans-serif;
 	text-align: left;
-
+	margin-top: 15px;
 	padding: 50px 60px 40px;
 	overflow: hidden;
 }
@@ -68,7 +68,6 @@
 	color: #ffffff;
 	text-align: center;
 	line-height: 35px;
-
 	margin-right: 3px;
 	margin-bottom: 5px;
 }
@@ -97,7 +96,7 @@
 	display: block;
 	border-radius: 3px;
 	box-sizing: border-box;
-	background-color: rgba(8, 49, 80, 1);
+	background-color: #232539;
 	box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
 	border: none;
 	resize: none;
