--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -268,12 +268,12 @@
 {
     color:#000;
     border:2px solid #fff;
-    background:#fff !important
+    background:#fff !important;
 }
 .kb_caption h1
 {
     color:#bf392b;
-    background:rgba(255,255,255,0.5);
+    background:rgba(35, 37, 57,0.6);
     border-radius: 60px;
 }
 .kb_caption h2
